[package]
name = "truskawka_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"]}
bytes = "1.4.0"
thiserror = "1.0.40"
ascii = "1.1.0"
log = "0.4.19"
futures = "0.3.28"